<resources>
    <string name="app_name">PsyApps</string>
    <string name="psyapps">PsyApps</string>
    <string name="name">Masukkan Nama Anda</string>
    <string name="create_an_account">Create an account</string>
    <string name="loginAcc">Welcome to PsyApps</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="msg_login">Dengan PsyApps, Mental kamu aman</string>
    <string name="title_login">Welcome to PsyApps</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign Up</string>
    <string name="ask_anything">Ask anything..</string>
    <string name="ask_now">Ask Now</string>
    <string name="hi_there">Hi There</string>
    <string name="text_here">Text Here..</string>
    <string name="title_question">Favorite</string>


    <!--    Questions List-->
    <string-array name="data_names">
        <item>Dr.Tirta</item>
        <item>Dr.Boyke</item>
        <item>Dr.Ragil</item>
        <item>Dr.Ajik</item>
        <item>Dr.Opan</item>
        <item>Dr.Hulk</item>
        <item>Dr.Spider</item>
        <item>Dr.Thor</item>
        <item>Dr.Capt</item>
        <item>Dr.Astra</item>
        <item>Dr.Chamber</item>
        <item>Dr.Viper</item>
        <item>Dr.Omen</item>
        <item>Dr.Raze</item>
        <item>Dr.Jett</item>
    </string-array>

    <string-array name="data_favorites">
        <item>Dr.Astra</item>
        <item>Dr.Chamber</item>
        <item>Dr.Viper</item>
        <item>Dr.Omen</item>
        <item>Dr.Raze</item>
        <item>Dr.Jett</item>
    </string-array>
    <string-array name="data_favorite_question">
        <item>Have you lost interest or pleasure in activities that you usually enjoy?</item>
        <item>How are your relationships with family and friends? Have there been any changes in your social interactions?</item>
        <item>Have you ever had thoughts of harming yourself or felt that life is not worth living?</item>
        <item>How do you handle situations that make you angry or frustrated?</item>
        <item>Do you feel confident about yourself and your abilities? Has there been any change in your self-esteem?</item>
        <item>Have you lost interest or pleasure in activities that you usually enjoy?</item>
    </string-array>

    <!-- Ini List My Question -->
    <string-array name="data_name_my_question">
        <item>Ragil Azarya</item>
        <item>Ragil Azarya</item>
        <item>Ragil Azarya</item>
        <item>Ragil Azarya</item>
        <item>Ragil Azarya</item>
    </string-array>

    <string-array name="data_my_questions">
        <item>Have you lost interest or pleasure in activities that you usually enjoy?</item>
        <item>How are your relationships with family and friends? Have there been any changes in your social interactions?</item>
        <item>Have you ever had thoughts of harming yourself or felt that life is not worth living?</item>
        <item>How do you handle situations that make you angry or frustrated?</item>
        <item>Do you feel confident about yourself and your abilities? Has there been any change in your self-esteem?</item>
    </string-array>

    <string-array name="data_questions">
        <item><item>How do you handle situations that make you angry or frustrated?</item></item>
        <item><item>How do you handle situations that make you angry or frustrated?</item></item>
        <item><item>How do you handle situations that make you angry or frustrated?</item></item>
        <item>How does the bystander effect influence people\'s likelihood to help in emergency situations?</item>
        <item><item>How do you handle situations that make you angry or frustrated?</item></item>
        <item>How have you been feeling overall in the past week?</item>
        <item>How have you been feeling overall in the past week?</item>
        <item>Are you experiencing any sleep difficulties, such as insomnia or frequent waking up at night?</item>
        <item>How is your energy level throughout the day? Do you often feel tired or lethargic?</item>
        <item>Do you find it hard to focus or concentrate on daily tasks?</item>
        <item>Have you lost interest or pleasure in activities that you usually enjoy?</item>
        <item>How have you been feeling overall in the past week?</item>
        <item>Have you ever had thoughts of harming yourself or felt that life is not worth living?</item>
        <item>How do you handle situations that make you angry or frustrated?</item>
        <item>Do you feel confident about yourself and your abilities? Has there been any change in your self-esteem?</item>
    </string-array>

    <integer-array name="data_img">
        <item>@drawable/profile_img</item>
        <item>@drawable/profile_img</item>
        <item>@drawable/profile_img</item>
        <item>@drawable/profile_img</item>
        <item>@drawable/profile_img</item>
        <item>@drawable/profile_img</item>
        <item>@drawable/profile_img</item>
        <item>@drawable/profile_img</item>
        <item>@drawable/profile_img</item>
        <item>@drawable/profile_img</item>
        <item>@drawable/profile_img</item>
        <item>@drawable/profile_img</item>
        <item>@drawable/profile_img</item>
        <item>@drawable/profile_img</item>
        <item>@drawable/profile_img</item>
    </integer-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>