<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign"
    tools:context=".Register.RegisterActivity">

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/guideline2"
      app:srcCompat="@drawable/psyapps" />

  <TextView
      android:id="@+id/tv_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:fontFamily="@font/inter_semibold"
      android:text="@string/psyapps"
      android:textSize="24sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageView
      android:id="@+id/iv_logo"
      android:layout_width="200dp"
      android:layout_height="100dp"
      android:layout_gravity="center"
      app:layout_constraintBottom_toTopOf="@+id/tv_create"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_title"
      app:srcCompat="@drawable/psyapps" />

  <TextView
      android:id="@+id/tv_create"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="140dp"
      android:fontFamily="@font/inter_semibold"
      android:text="@string/create_an_account"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_title" />

  <TextView
      android:id="@+id/tv_enter_email"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:fontFamily="@font/inter"
      android:text="Enter your email to sign up for this app"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_create" />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/et_email"
      android:layout_width="327dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_enter_email">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="email@domain.com" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/et_password"
      android:layout_width="327dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_email">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password" />
  </com.google.android.material.textfield.TextInputLayout>

  <Button
      android:id="@+id/signupButton"
      android:layout_width="0dp"
      android:layout_height="64dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="32dp"
      android:backgroundTint="@color/black"
      android:text="@string/create_an_account"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_password" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guidelineHorizontal"
      android:layout_width="wrap_content"
      android:layout_height="64dp"
      android:orientation="horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintGuide_percent="0.30191082"
      app:layout_constraintStart_toStartOf="parent" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline2"
      android:layout_width="wrap_content"
      android:layout_height="64dp"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>